disabling deps caching in build

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version-file: go.mod
-          cache: true
+          # cache: true
 
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
@@ -42,7 +42,7 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version-file: go.mod
-          cache: true
+          # cache: true
 
       - name: Test
         run: go test ./...
@@ -59,7 +59,7 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version-file: go.mod
-          cache: true
+          # cache: true
 
       - name: Build
         run: go build
